tests/fixtures/semantics/valid/call_allowed_error_union.ora
fn may_fail() -> !u32 | E1 {
    return error.E1;
}

fn caller() -> !u32 | E1 {
    const v = may_fail(); // allowed: E1 permitted by caller
    return v;
}


